--- a/webServerAndSites/index.css
+++ b/webServerAndSites/index.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 body {
     background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
+    font-family: "Inter", sans-serif;
     text-align: center;
     padding: 50px;
 }
