updated text area
added word wrap

--- a/webServerAndSites/index.css
+++ b/webServerAndSites/index.css
@@ -37,6 +37,8 @@ h1 {
     width: 18rem;
     height: 12rem;
     font-family: "Inter", sans-serif;
+    resize: none;
+    word-break: break-word;
 }
 
 .divImage{
